Product Module : Save Product with Extra Image Description Added.

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_form.html
@@ -89,6 +89,7 @@
     brandModuleURL = "[[@{/brands}]]";
     MAX_FILE_SIZE = 502400; // 500KB
     defaultImageThumbnailSrc = "[[@{/images/image-thumbnail.png}]]";
+    checkUniqueURL = "[[@{/products/check_name}]]";
 
 </script>
 
