--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
@@ -14,7 +14,8 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Product Name:</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" th:field="*{name}" required minlength="3" maxlength="256" id="nameInput"/>
+            <input type="text" class="form-control" th:field="*{name}" required minlength="3" maxlength="256"
+                   id="nameInput"/>
         </div>
     </div>
 
@@ -87,14 +88,16 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Short Description: </label>
         <div class="col-sm-10">
-                <textarea id="shortDesc" class="form-control" th:field="*{shortDescription}" rows="10" cols="20" maxlength="512"></textarea>
+            <textarea id="shortDesc" class="form-control" th:field="*{shortDescription}" rows="10" cols="20"
+                      maxlength="512"></textarea>
         </div>
     </div>
 
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Full Description: </label>
         <div class="col-sm-10">
-                <textarea id="longDesc" class="form-control" th:field="*{fullDescription}" rows="10" cols="20" maxlength="4096"></textarea>
+            <textarea id="longDesc" class="form-control" th:field="*{fullDescription}" rows="10" cols="20"
+                      maxlength="4096"></textarea>
         </div>
     </div>
 
@@ -139,8 +142,9 @@
     <div class="row" id="divProductImages">
 
         <div class="col border m-3 p-2">
-        <div><label >Main Image: </label></div>
-            <div class="m-2"><img id="imageView" alt="Main image preview" class="img-fluid" th:src="@{${product.mainImagePath}}"></div>
+            <div><label>Main Image: </label></div>
+            <div class="m-2"><img id="imageView" alt="Main image preview" class="img-fluid"
+                                  th:src="@{${product.mainImagePath}}"></div>
             <div><input type="file" name="image"
                         accept="image/png, image/jpeg"
                         id="imageInput"
@@ -150,8 +154,9 @@
 
         <div class="col border m-3 p-2" id="divExtraImage0">
             <div id="extraImageHeader0">
-                <label >Extra Image #1: </label></div>
-            <div class="m-2"><img id="extraThumbnail0" alt="Extra Image #1 preview" class="img-fluid" th:src="@{/images/image-thumbnail.png}"></div>
+                <label>Extra Image #1: </label></div>
+            <div class="m-2"><img id="extraThumbnail0" alt="Extra Image #1 preview" class="img-fluid"
+                                  th:src="@{/images/image-thumbnail.png}"></div>
             <div><input type="file" name="extraImage"
                         accept="image/png, image/jpeg"
                         id="extraImage1">
@@ -159,7 +164,15 @@
         </div>
 
 
+    </div>
+</div>
 
+<div th:fragment="details" id="divProductDetails">
+    <div class="form-inline" id="divDetail0">
+        <label class="m-3">Name</label>
+        <input type="text" name="detailNames" maxlength="255" class="form-control w-25">
+        <label class="m-3">Value</label>
+        <input type="text" name="detailValues" maxlength="255" class="form-control w-25">
     </div>
 </div>
 
