--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_form.html
@@ -18,6 +18,7 @@
           onsubmit="return checkIsProductUnique(this);"
           enctype="multipart/form-data" id="productForm">
         <input type="hidden" th:field="*{id}">
+        <input type="hidden" id="categoryId" th:value="${product.category.id}" th:if="${product.category != null}">
         <div>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
