--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_details.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_details.html
@@ -10,6 +10,7 @@
 
     <th:block th:each="detail, status: ${product.details}" th:if="${product.details !=null}">
         <div class="form-inline" th:id="${'divDetail'+status.index}">
+            <input type="hidden" name="detailIDs" th:value="${detail.id}">
             <label class="m-3">Name</label>
             <input type="text" name="detailNames" maxlength="255" class="form-control w-25" th:value="${detail.name}">
             <label class="m-3">Value</label>
@@ -20,6 +21,7 @@
 
 
     <div class="form-inline" th:id="${'divDetail'+#lists.size(product.details)}">
+        <input type="hidden" name="detailIDs" value="0">
         <label class="m-3">Name</label>
         <input type="text" name="detailNames" maxlength="255" class="form-control w-25">
         <label class="m-3">Value</label>
