Product Module : Product OverView Modal Fixing.

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
@@ -63,7 +63,7 @@
 </div>
 
 <div th:fragment="detail_edit_delete_fn(context,Id)">
-    <a class="cursor-hand"
+    <a class="cursor-hand link-details"
        th:href="@{'/'+${context}+'/detail/'+${Id}}">
         <i class="fas fa-file-alt fa-2x icon-green"></i>
     </a>&nbsp;
