--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/products.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/products.html
@@ -16,7 +16,29 @@
             <i class="fas fa-file-csv fa-3x icon-dark cursor-hand"></i>
         </a>
     </div>
-    <div th:replace="~{fragments/fragments :: search_form_and_message('/products/page/1')}"></div>
+
+    <div class="m-1">
+        <form class="form-inline" th:action="@{/products/page/1}" id="searchForm">
+            <input type="hidden" name="sortField" th:value="${sortField}">
+            <input type="hidden" name="sortDir" th:value="${sortDir}">
+            &nbsp; Category:
+            <select name="categoryId" class="form-control" id="dropdownCategory">
+                <option value="0">All Categories</option>
+                <th:block th:each="cat: ${listCategories}">
+                    <option th:value="${cat.id}" th:selected="${cat.id == categoryId}">[[${cat.name}]]</option>
+                </th:block>
+            </select>
+            &nbsp;
+            <input class="form-control mr-sm-2" type="search" placeholder="Filter" aria-label="Search" name="keyword"
+                   id="keyword" required th:value="${keyword}">
+            <button class="btn btn-outline-primary my-2 my-sm-0 fas fa-search fa-3x" type="submit"></button>&nbsp;&nbsp;
+            <button class="btn btn-outline-secondary my-2 my-sm-0 fas fa-eraser fa-3x" type="button"
+                    onclick="clearFilter()"></button>
+        </form>
+        <div th:if="${message}" class="alert alert-success text-center"
+             th:text="${message}">[[${message}]]
+        </div>
+    </div>
 
     <div class="full-details">
         <table
@@ -100,12 +122,18 @@
                     let linkDetailURL = $(this).attr("href");
                     $('#detailModal').modal("show").find(".modal-content").load(linkDetailURL);
                 });
+
+                $('#dropdownCategory').on("change", function (e){
+                   $('#searchForm').submit();
+                });
+
             });
 
     function showModalDialog(message) {
         $('#modalBody').text(message);
         $('#modalDialog').modal();
     }
+
     function clearFilter() {
         window.location = "[[@{/products}]]"
     }
