--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_detail_modal.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_detail_modal.html
@@ -1,3 +1,4 @@
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div class="modal-header">
     <h4 class="modal-title" id="modalTitle">Product Details</h4>
     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -105,87 +106,19 @@
             </div>
 
             <div class="tab-pane" id="description" role="tabpanel" aria-labelledby="description-tab">
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Short Description: </label>
-                    <div class="border p-2 m-2" th:utext="${product.shortDescription}"></div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Long Description: </label>
-                    <div class="border p-2 m-2" th:utext="${product.fullDescription}"></div>
-                </div>
-
+                <div th:replace="~{products/readonly/product_description_readonly :: content}"></div>
             </div>
 
             <div class="tab-pane" id="images" role="tabpanel" aria-labelledby="images-tab">
-
-                <div class="row">
-                    <div class="col border m-3 p-2">
-                        <div><label>Main Image: [[${product.mainImage}]]</label></div>
-                        <div class="border m-3 p-2">
-                            <img th:src="@{${product.mainImagePath}}" class="img-fluid">
-                        </div>
-                    </div>
-
-                    <th:block th:each="productImage, status : ${product.images}">
-                        <div class="col border m-3 p-2">
-                            <div><label>Extra Image #[[${status.index + 1}]]: [[${productImage.name}]]</label></div>
-                            <div class=" border m-3 p-2">
-                                <img th:src="@{${productImage.imagePath}}" class="img-fluid">
-                            </div>
-                        </div>
-                    </th:block>
-                </div>
-
+                <div th:replace="~{products/readonly/product_images_readonly :: content}"></div>
             </div>
 
             <div class="tab-pane drop" id="details" role="tabpanel" aria-labelledby="details-tab">
-                <div>
-                    <table class="table table-striped table-bordered table-hover">
-                        <thead class="thead-dark">
-                        <tr>
-                            <th>Name</th>
-                            <th>Value</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="detail : ${product.details}">
-                                <td>[[${detail.name}]]</td>
-                                <td>[[${detail.value}]]</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+                <div th:replace="~{products/readonly/product_details_readonly :: content}"></div>
             </div>
 
             <div class="tab-pane drop" id="shipping" role="tabpanel" aria-labelledby="shipping-tab">
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Length (inch): </label>
-                    <div class="col-sm-10">
-                        <input class="form-control" th:value="${product.length}" readonly/>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Width (inch): </label>
-                    <div class="col-sm-10">
-                        <input class="form-control" th:value="${product.width}" readonly/>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Height (inch): </label>
-                    <div class="col-sm-10">
-                        <input class="form-control" th:value="${product.height}" readonly/>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Weight (pounds): </label>
-                    <div class="col-sm-10">
-                        <input class="form-control" th:value="${product.weight}" readonly/>
-                    </div>
-                </div>
+                <div th:replace="~{products/readonly/product_shipping_readonly :: content}"></div>
             </div>
 
         </div>
@@ -199,3 +132,4 @@
 <div class="modal-footer">
     <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 </div>
+</html>
